@@ -110,6 +110,56 @@
     </layout>
    </item>
    <item>
+    <widget class="QWidget" name="widget_storage_strategy" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Storage strategy:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="comboBox_storage">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <item>
+         <property name="text">
+          <string>No basins: Store only the selected feature data (legacy behavior)</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>With basins: Store features, refer to the original file (recommended)</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Basins only: Do not store features, refer to original file (fast)</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="BulkList" name="bulklist_features" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
