@@ -2,6 +2,7 @@
 from .bg_thread import run_async
 from .double_spin_box_nan import DoubleSpinBoxNan
 from .feature_combobox import FeatureComboBox
+from .get_path import get_directory
 from .key_value_table_widget import KeyValueTableWidget
 from .mdi_subwindow_wo_close import MDISubWindowWOButtons
 from .qrangeslider import QRangeSlider
