@@ -7,7 +7,7 @@ def get_directory(
         parent: QtWidgets.QWidget,
         identifier: str,
         caption: str = "Select directory",
-        force_dialog: bool = False,
+        force_dialog: bool = True,
         ):
     """Retrieve the path for a given identifier
 
@@ -18,13 +18,16 @@ def get_directory(
     `show_dialog` is set to `True`, otherwise the value from the settings
     is returned.
     """
-    path = "."  # default value
+    path = ""  # default value
     settings = QtCore.QSettings()
-    dir_settings = settings.value(f"paths/{identifier}", path)
-    if dir_settings and pathlib.Path(dir_settings).exists():
-        path = dir_settings
-    else:
-        force_dialog = True
+    if not force_dialog:
+        # attempt to get the directory from the settings
+        dir_settings = settings.value(f"paths/{identifier}", path)
+        if dir_settings and pathlib.Path(dir_settings).exists():
+            path = dir_settings
+        else:
+            # we *have* to ask the user for the directory
+            force_dialog = True
 
     if force_dialog:
         dir_user = QtWidgets.QFileDialog.getExistingDirectory(
